added stuff: memory, Frontend, etc.